# PortfolioAnalyticsAI

./: ._requirements.txt  .gitignore  CACHED_STOCKS_METHODS.md  MANIFEST.in  README.md  README_COMPREHENSIVE.md  README_NEW.md  analyzer_example.py  build_package.py  cached_stocks_demo.py  example.py  prepopulate_cache.py  pyproject.toml  requirements.txt  visualization_demo.py
.github/: copilot-instructions.md
docs/: RISK_FREE_RATE_INTEGRATION.md
notebooks/: 01_getting_started.ipynb  02_analyzer_demo.ipynb  03_cache_population_demo.ipynb  04_random_portfolio_analysis.ipynb  05_analyzer_llm_demo.ipynb
sample_data/: market_data.db
src/portfolio_analytics/: __init__.py  analyzer.py  data_provider.py  optimization.py  performance.py  portfolio.py  risk_models.py  visualization.py
tests/: __init__.py  test_analyzer.py  test_cached_stocks.py  test_data_provider.py  test_integration.py  test_optimization.py  test_portfolio.py
